# libseat-rs

./: Cargo.toml  README.md  build.rs
examples/: simple.rs
libseat-sys/: Cargo.toml  build.rs
libseat-sys/src/: bindings.rs  wrapper.h
log_handler/: log_handler.c  log_handler.h
src/: ffi_seat_listener.rs  lib.rs  log.rs  log_handler.rs
