[package]
name = "libseat"
description = "Safe libseat bindings"
version = "0.1.4"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

keywords = ["libseat"]
license = "MIT"
repository = "https://github.com/PolyMeilex/libseat-rs"
documentation = "https://docs.rs/libseat"

[dependencies]
errno = "0.2.7"
libseat-sys = { version = "0.1.0", path = "./libseat-sys" }
slog = "2.7.0"

[features]
default = ["custom_logger"]
custom_logger = ["cc", "pkg-config"]

[build-dependencies]
cc = { version = "1.0.68", optional = true }
pkg-config = { version = "0.3.19", optional = true }

[dev-dependencies]
slog-term = "2.8.0"


[[example]]
name = "simple"

[package.metadata.docs.rs]
no-default-features = true
