[package]
name = "libseat"
description = "Safe libseat bindings"
version = "0.2.3"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

keywords = ["libseat"]
license = "MIT"
repository = "https://github.com/PolyMeilex/libseat-rs"
documentation = "https://docs.rs/libseat"

[dependencies]
errno = "0.3.1"
libseat-sys = { version = "0.1.9", path = "./libseat-sys" }
log = "0.4"

[features]
default = ["custom_logger"]
custom_logger = ["cc", "pkg-config"]
# Used to disable linking in docs.rs enviroment
docs_rs = ["libseat-sys/docs_rs"]

[build-dependencies]
cc = { version = "1.0.68", optional = true }
pkg-config = { version = "0.3.19", optional = true }

[[example]]
name = "simple"

[package.metadata.docs.rs]
no-default-features = true
features = ["libseat-sys/docs_rs"]
