[package]
name = "libseat-sys"
description = "libseat bindings"
version = "0.1.1"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

keywords = ["libseat"]
license = "MIT"
repository = "https://github.com/PolyMeilex/libseat-rs"
documentation = "https://docs.rs/libseat-sys"

[features]
use_bindgen = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.58.1", optional = true }
pkg-config = { version = "0.3.19" }
