[package]
name = "libseat-sys"
description = "libseat bindings"
version = "0.1.8"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

keywords = ["libseat"]
license = "MIT"
repository = "https://github.com/PolyMeilex/libseat-rs"
documentation = "https://docs.rs/libseat-sys"

[features]
use_bindgen = ["bindgen"]
# NOOP: Should be removed in 0.2
docs_rs = []

[build-dependencies]
bindgen = { version = "0.58.1", optional = true }
pkg-config = { version = "0.3.19" }

[package.metadata.docs.rs]
no-default-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
